--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
 @import "tailwindcss";
+
+@theme{
+    --font-black-ops-one: "Black Ops One", system-ui;
+    --font-caveat-brush: "Caveat Brush", system-ui;
+}
